I have gotten the grab and inventory commands to work the way I want them. I had to alter my plans for an inventory because I do not think I have enough time to complete a detailed grab/put mechanism. Instead I'm going to use a find+combine mechanism, where if you have the proper item in your inventory, then dependent actions will automatically happen.

--- a/exampleworld.html
+++ b/exampleworld.html
@@ -16,6 +16,7 @@
         <p>
             <span class='talk' conversationid='1'></span>
         </p>
+        <p class='itemdesc'><span class='item' conversationid='2' itemid='nd1-quill'></span></p>
     </div>
     <div class='east'></div>
     <div class='south'></div>
