--- a/help.html
+++ b/help.html
@@ -1,17 +1,20 @@
 <div>
     Here's a list of accepted commands:
     <dl>
-        <dt>?, h, help</dt><dd>Display this message</dd>
-        <dt>n, north</dt><dd>Move to the north</dd>
-        <dt>e, east</dt><dd>Move to the east</dd>
-        <dt>s, south</dt><dd>Move to the south</dd>
-        <dt>w, west</dt><dd>Move to the west</dd>
-        <dt>ln, look n, look north</dt><dd>Look towards the north</dd>
-        <dt>le, look e, look east</dt><dd>Look towards the east</dd>
-        <dt>ls, look s, look south</dt><dd>Look towards the south</dd>
-        <dt>lw, look w, look west</dt><dd>Look towards the west</dd>
-        <dt>l [object], look [object]</dt><dd>Look at the [object], for example, the command "l key" would print a description of an object "key" found in the area your character resides, if such an object exists.</dd>
-        <dt>t [person], talk [person]</dt><dd>Initiate a conversation with the [person], for example, the command "t man" would initiate a conversation with the persona identified as 'man' in the current area, if a person identified as 'man' exists.</dd>
-        <dt>say [something]</dt><dd>If you have initiated a conversation, you can reply by typeing in 's' or 'say' followed by an appropriate answer</dd>
+        <dt><strong>?</strong>, <strong>h</strong>, <strong>help</strong></dt><dd>Display this message</dd>
+        <dt><strong>n</strong>, <strong>north</strong></dt><dd>Move to the north</dd>
+        <dt><strong>e</strong>, <strong>east</strong></dt><dd>Move to the east</dd>
+        <dt><strong>s</strong>, <strong>south</strong></dt><dd>Move to the south</dd>
+        <dt><strong>w</strong>, <strong>west</strong></dt><dd>Move to the west</dd>
+        <dt><strong>ln</strong>, <strong>look n</strong>, <strong>look north</strong></dt><dd>Look towards the north</dd>
+        <dt><strong>le</strong>, <strong>look e</strong>, <strong>look east</strong></dt><dd>Look towards the east</dd>
+        <dt><strong>ls</strong>, <strong>look s</strong>, <strong>look south</strong></dt><dd>Look towards the south</dd>
+        <dt><strong>lw</strong>, <strong>look w</strong>, <strong>look west</strong></dt><dd>Look towards the west</dd>
+        <dt><strong>l [object]</strong>, <strong>look [object]</strong></dt><dd>Look at the [object], for example, the command "l key" would print a description of an object "key" found in the area your character resides, if such an object exists.</dd>
+        <dt><strong>t [person]</strong>, <strong>talk [person]</strong></dt><dd>Initiate a conversation with the [person], for example, the command "t man" would initiate a conversation with the persona identified as 'man' in the current area, if a person identified as 'man' exists.</dd>
+        <dt><strong>say [something]</strong></dt><dd>If you have initiated a conversation, you can reply by typeing in 's' or 'say' followed by an appropriate answer</dd>
+        <dt><strong>g [object]</strong>, <strong>grab [object]</strong></dt><dd>Pick up an object!</dd>
+        <dt><strong>i</strong>, <strong>inv</strong>, <strong>inventory</strong></dt><dd>Look at all the objects you've picked up</dd>
+        <dt><strong>c [object1], [object2]</strong>, <strong>combine [object1], [object2]</strong></td><dd>Combine 2 objects in your inventory</dd>
     </dl>
 </div>
