Worked on the second node a bit, fleshed out a map of what I need to create, and fixed some bugs. Also added a small amount of styling to the output of old commands

--- a/exampleworld.html
+++ b/exampleworld.html
@@ -36,7 +36,7 @@
 </div>
 <div class='conversations'>
     <ol conversationid='1' canrepeat='false' gotoifrepeated='2'>
-        <li actioncmd='n/acommand'>
+        <li actioncmd='n/acommand' stopconv='drawing/playerHas'>
             <div class='speech'>
                 <p><span class='answer' field='gender'>male</span><span replace='gender/tupper/tgenderSub' /></p>
             </div>
