--- a/world1/node1.html
+++ b/world1/node1.html
@@ -69,7 +69,24 @@
         </li>
         <li>
             <div class='speech'>
-                <p>"Fantastic!" he says, "A <span replace='gender/tgenderObj/tupper' />! You should make lots of friends!" as he scribbles something unintelligble down in the book.</p>
+                <p>
+                    "Fantastic!" he says, "A <span replace='gender/tgenderObj/tupper' />! You should make lots of friends!" as he scribbles something unintelligble down in the book.
+                </p>
+            </div>
+        </li>
+        <li>
+            <div class='speech'>
+                <p>
+                    "Now, then, if you haven't already, you should pick up that old quill pen on the ground, that blank piece of paper, and the extra bottle of ink, then you should draw a picture. Pictures say a lot about a person."
+                </p>
+            </div>
+        </p>
+        <li stopconv='drawing/playerHas'><div class='speech'></div></li>
+        <li>
+            <div class='speech'>
+                <p>
+                    You give the old man your drawing, adjusting it in front of his face to bring it into focus, he says "Oh excellent, excellent, I think the diviner's will have lots to say! Lots!". He sets down the drawing opposite the page he's writing on, and looks back up at you.
+                </p>
             </div>
         </li>
         <li>
@@ -78,7 +95,7 @@
                     "Now, what is your-" the man's eyes glaze over momentarily, interrupting whatever he was about to say. "I'm sorry, looks like I'm going to have to cut this part short -- the high magus has give instruction to see you off to the master magus you will be studying under."
                 </p>
                 <p>
-                    The man sets down his quill, and picks up a round shiny object. "Now, <span replace='gender/tgenderChild' />, I'm sure you have a lot of questions. Usually we get to introductions after I ask your name, but there's no time for that now." You hear him mutter something under his breath, and see him wave his right hand over the object in his left hand.
+                    The man sets down his quill, and picks up a round shiny object. "Now, <span replace='gender/tgenderChild' />, I'm sure you have a lot of questions. Usually we get to introductions after I ask your name, but there's no time for that now." You hear him mutter something under his breath, and see him wave his right hand over the object in his left hand. "I'm sorry I don't have the time to prepare you for this, but the pain should be brief."
                 </p>
                 <p>
                     As you are about to ask him what is going on, you feel like you're being compressed and stuffed in side a box -- you're vision becomes all stretched and skewed, and when the pain becomes unbearable, you pass out.
