--- a/world1/start.html
+++ b/world1/start.html
@@ -17,7 +17,7 @@
 
             <ul>
                 <li>If you click in the grey area at the bottom of the screen, you can start typing! This is the command area -- hitting the <em>enter</em> key will execute the command you typed in!</li>
-                <li>At any point you can type in <span class='command'>?</span> (that is, just a question mark) in the entry field, then hit the enter key, to get a list of possible commands, and other, hopefully helpful, information.</li>
+                <li>At any point you can type in <span class='command'>help</span> in the command field, then hit the enter key, to get a list of possible commands, and other, hopefully helpful, information.</li>
                 <li>Have fun! Remember, a part of playing this text adventure is figuring out what you need to type in to do something. It's part of puzzle!</li>
             </ul>
 
